# romance-agent

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yaml  idea.md  index.html  input.txt  mise.toml  package.json  relationships.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  프롬프트
backend/: .dockerignore  AGENTS.md  Dockerfile.dev  README.md  main.py  pyproject.toml
backend/apps/narrative_memory/: composition.py
backend/apps/story_bible/: __init__.py  composition.py
backend/docs/: backend-coding-rules.md  llm-audit-logging.md  story-bible-persistence.md
backend/infrastructure/audit/: __init__.py  jsonl_agent_audit.py  sqlite_agent_audit.py
backend/infrastructure/llm/: prompt_registry.py  pydantic_ai_scene_analysis.py  scene_analysis_factory.py  scene_analysis_schemas.py  scripted_scene_analysis.py
backend/prompts/: README.md
backend/prompts/scene-analysis/: system.md
backend/tests/: test_health_api.py
backend/tests/health/: test_repository.py  test_service.py
backend/tests/infrastructure/: test_jsonl_agent_audit.py
backend/tests/narrative_memory/: test_agent_composition.py  test_chunking.py  test_merge.py  test_prompt_registry.py  test_scene_analysis_agents.py  test_scene_analysis_factory.py  test_scene_analysis_result.py  test_scene_analysis_service.py  test_scene_analysis_translation.py  test_scene_analysis_use_case.py  test_snapshot_codec.py  test_sqlite_agent_audit.py  test_sqlite_snapshot_repository.py
backend/tests/story_bible/: __init__.py  test_api.py  test_domain.py  test_file_repository.py  test_service.py
backend/tests/writing_assistant/: test_text_generation_port.py
llm-agent/: AGENTS.md  pyproject.toml
llm-agent/docs/: dialogue-generation-agent-coding-rules.md  llm-agent-coding-rules.md
llm-agent/src/dialogue_generation_agent/: AGENTS.md  (+3 more)
(+447 files in other folders)
