[project]
name = "romance-agent-backend"
version = "0.1.0"
description = "FastAPI backend for Romance Agent"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.116,<1",
  "pydantic-ai>=2.9.1",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx2>=2,<3",
  "pytest>=8.4,<10",
  "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
