[project]
name = "narrative-analysis-agent"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = ["pydantic-ai>=2.9.1,<3"]

[tool.setuptools.package-data]
narrative_analysis_agent = ["prompts/**/*.md"]

[dependency-groups]
dev = ["pytest>=8.4,<10", "ruff>=0.12,<1"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["live: calls a configured external LLM provider"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
